fix jump effect in nautilus path bar button

--- a/Cloudy-Dark-Grey/gtk-3.0/gtk.css
+++ b/Cloudy-Dark-Grey/gtk-3.0/gtk.css
@@ -4573,7 +4573,8 @@ filechooser headerbar widget stack box.path-bar-box,
       border-color: #2f2f2f;
       color: #ffffff;
       margin: 0px;
-      border-radius: 2px; }
+      border-radius: 2px;
+      padding: 0 4px; }
       filechooser headerbar widget stack box.path-bar-box .nautilus-path-bar button.image-button:last-child label, filechooser headerbar widget stack box.path-bar-box .nautilus-path-bar button.image-button:last-child image,
       .nautilus-window headerbar widget stack box.path-bar-box .nautilus-path-bar button.image-button:last-child label,
       .nautilus-window headerbar widget stack box.path-bar-box .nautilus-path-bar button.image-button:last-child image {
