--- a/Cloudy-Light-Grey/gtk-3.0/gtk.css
+++ b/Cloudy-Light-Grey/gtk-3.0/gtk.css
@@ -4578,7 +4578,8 @@ filechooser headerbar widget stack box.path-bar-box,
       border-color: #454545;
       color: #ffffff;
       margin: 0px;
-      border-radius: 2px; }
+      border-radius: 2px;
+      padding: 0 4px; }
       filechooser headerbar widget stack box.path-bar-box .nautilus-path-bar button.image-button:last-child label, filechooser headerbar widget stack box.path-bar-box .nautilus-path-bar button.image-button:last-child image,
       .nautilus-window headerbar widget stack box.path-bar-box .nautilus-path-bar button.image-button:last-child label,
       .nautilus-window headerbar widget stack box.path-bar-box .nautilus-path-bar button.image-button:last-child image {
